--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,21 +1,26 @@
 <ul (mouseleave)="mouseLeave()">
-
-  <li *ngFor="let item of daysLine; let i = index">
+  <li>
+    <span class="btnPrev" *ngIf="currentPage > 0" (click)="slide($event,false)">
+      < </span>
+  </li>
+  <li class="animated fadeIn" *ngFor="let item of daysLine; let i = index">
 
     <div class="contentItemLine">
-      
+
       <div *ngIf="item.notices.length > 0" class="btnRed" [ngClass]="{'btnRedActive': itemSelected == i}" (mouseenter)="mouseEnter(i)">
       </div>
       <br>
       <hr>
       <h4 class="rotate">{{ item.shortName }} </h4>
-     
-      
     </div>
 
     <div class="contentNotices" [class.style]="'none'" *ngIf="itemSelected == i || contentSelected ">
       <a class="itemNotices" *ngFor="let notice of item.notices" href="{{notice.link}}" target="_blank"> {{ notice.title.toUpperCase() }}
       </a>
     </div>
+  </li>
+
+  <li>
+  <span class="btnNext" *ngIf="currentPage < 11 " (click)="slide($event, true)"> > </span>
   </li>
   <ul>
