--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,204 @@
-/* You can add global styles to this file, and also import other style files */
-
-
 .container {
     margin-top: 30px;
-    height: 300px;
     text-align: center;
-    background-color: #FBFCF4;
-    border: 2px solid black;
+}
+i {
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+  }
+  
+  .right {
+      transform: rotate(-45deg);
+      -webkit-transform: rotate(-45deg);
+            /* Firefox */
+            -moz-transform: rotate(-45);
+            /* IE */
+            -ms-transform: rotate(-45);
+            /* Opera */
+            -o-transform: rotate(-45);
+  }
+  
+  .left {
+      transform: rotate(135deg);
+      -webkit-transform: rotate(135deg);
+
+      /* Firefox */
+      -moz-transform: rotate(135deg);
+      /* IE */
+      -ms-transform: rotate(135deg);
+      /* Opera */
+      -o-transform: rotate(135deg);
+  }
+
+
+  
+.bigContainer {
+    width: 100%;
+    display: absolute;
+}
+.siderLeft {
+    width: 1%;
+    display: inline-block;
 }
 
-hr {
+.main {
+    width: 94%;
+    display: inline-block;
 }
+
+.siderRight {
+    width:1%;
+    display: inline-block;
+}
+
+
+
+
+.rotate {
+    /* Safari, Chrome */
+    -webkit-transform: rotate(-45deg);
+    /* Firefox */
+    -moz-transform: rotate(-45deg);
+    /* IE */
+    -ms-transform: rotate(-45deg);
+    /* Opera */
+    -o-transform: rotate(-45deg);
+    /* Older versions of IE */
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=4);
+    /* CSS3 standard as defined here: http://www.w3.org/TR/css3-transforms/ */
+    transform: rotate(-45deg);
+    }
+
+
+ul {
+    list-style: none;
+    padding:0;
+    margin-top: 125px;
+    font-size: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    width:100%;
+    
+}
+
+h4 {
+    color: black;
+    padding: 0px;
+    font-size: 12px;
+
+}
+.btnRed {
+    position: absolute;
+    width:22px;
+    height: 22px;
+    background-color: #A50021;
+    border-radius: 100%;
+    margin-left: 1.2%;
+    margin-top: -8px;
+    cursor: pointer;
+}
+/* 
+.cantNotices {
+    color: white;
+    text-align: center;
+    position:absolute;
+    margin-left: -15%;
+    margin-top: 15%;
+}  */
+
+ /* 00A599
+   FFA100
+   FF5800 */
+
+.cantNotices {
+    background-color: #FF5800;
+    box-shadow: 1px 1px black;
+    border-radius: 25%;
+    position: absolute;
+    color: white;
+    width: 14px;
+    height: 14px;
+}
+
+
+.no-seleccionable {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none; 
+}
+
+
+.signoNotices {
+    font-size: 15px;
+    color:white;
+
+}
+
+
+.btnRedActive {
+    border: 2px solid #A50021;
+    background-color: white;
+    width:  12px;
+    height: 12px;
+}
+
+.contentNotices {
+    position: absolute;
+    z-index: 10000;
+    width: 10%;
+    text-align: center;
+    margin-left: -2%
+}
+.itemNotices {
+    z-index: 9999999;
+    margin-top: 10px;
+    position: relative;
+    display: block;
+    border: 1px solid black;
+    background-color: #A50021;
+    color: white;
+}
+
+
+li {
+    display: inline-block;
+    min-width: 2.5%;
+    max-width: 3.5%;
+
+}
+
+ a {
+    text-decoration: none;
+    color:black;
+}
+
+.loading {
+    text-align: center;
+    margin-top: 50px;
+}
+
+
+.btnNext {
+    cursor: pointer;
+    background-color: #A50021;
+    color:white;
+    padding: 5px;
+    width: 18px;
+    height: 18px;
+    border-radius: 100%;
+    position: relative;
+    }
+
+ .btnPrev {
+    cursor: pointer;
+    background-color: #A50021;
+    color:white;
+    color:white;
+    padding: 5px;
+    width: 18px;
+    height: 18px;
+    border-radius: 100%;
+ }
+
